--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 }
         @media only screen and (max-width: 900px) {
             #name::after{
-                content: "⪻──────────❧Albedo☙───────────⪼";
+                content: "⪻───────❧Albedo☙────────⪼";
                 color: white;
                 }
                 
