--- a/index.html
+++ b/index.html
@@ -712,10 +712,10 @@ font-size: 3em;
            //document.getElementById('name').innerHTML = '⪻────────❧Albedo☙─────────⪼'
             document.getElementById('chalk').style.position = 'absolute' 
             document.getElementById('chalk').style.bottom = '-3%'
-            document.getElementById('chalk').style.width = '31em'
-            document.getElementById('chalk').style.height = '21em'
-            document.getElementById('chr1').style.height = '26em'
-            document.getElementById('chr1').style.width = '21em'
+            document.getElementById('chalk').style.width = '60%'
+            document.getElementById('chalk').style.height = '86%'
+            document.getElementById('chr1').style.height = '110%'
+            document.getElementById('chr1').style.width = '41%'
             document.getElementById('chr1').style.bottom= '-15%'
             document.getElementById('chr1').style.left = '-100%'
             document.getElementById('msg').style.left = '4%'
@@ -723,8 +723,8 @@ font-size: 3em;
             document.getElementById('msg').style.width = '10em'
             document.getElementById('msg').style.height = '6em'
             document.getElementById('msgbtn').style.top = '-37%'
-            document.getElementById('textboxsim').style.width = '42em'
-            document.getElementById('textboxsim').style.height = '10em'
+            document.getElementById('textboxsim').style.width = '81%'
+            document.getElementById('textboxsim').style.height = '41%'
             document.getElementById('textboxsim').style.bottom = '5%'
             document.getElementById('textboxsim').style.left = '9%'
             document.getElementById('namesim').style.fontSize = '20pt'
@@ -738,8 +738,8 @@ font-size: 3em;
             document.getElementById('textsim4').style.fontSize = '12pt'
             document.getElementById('choices').style.top = '-3%'
             document.getElementById('choices').style.left = '27%'
-            document.getElementById('choices').style.height = '26em'
-            document.getElementById('choices').style.width = '26em'
+            document.getElementById('choices').style.height = '103%'
+            document.getElementById('choices').style.width = '51%'
             }
             else{
                 return
